--- a/index.html
+++ b/index.html
@@ -2,14 +2,83 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="description" content="In acest site sunt prezente proiectele mele">
+    <title>Contractare MediaWedding</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+
+
   </head>
   <body>
 
+<form action="result.html" method="GET">
+
+  <div >
+    <label for="name">Data Eveniment:</label>
+    <input >
+  </div>
+
+<button type="submit">Creare fisa</button>
+</form>
+
+
+<!--
+    <div id="exportContent">
+
+
+<h1 style="color:red"> Contract Prestare servicii </h1>
+      <div
+      <div class="data_eveniment">
+        Data eveniment:
+        <input id="text1"  placeholder="-">
+
+        <div class="data_eveniment">
+          Serviciu:
+          <input id="text2" placeholder="-">
+        </div>
+        <div class="data_eveniment">
+          Pachet:
+          <input id="text3" placeholder="-">
+        </div>
+        <div class="data_eveniment">
+          Echipa:
+          <input id="text4"  placeholder="-">
+        </div>
+
+        <br>
+        <div class="Tel">
+          Telefoane
+          <div class="">
+            Sot:
+              <input id="text5"  placeholder="-">
+          </div>
+          <div class="">
+            Sotie:
+              <input id="text6"  placeholder="-">
+          </div>
+
+        </div>
+      </div>
+      </div>
+
+ -->
+
+
+    </div>
 
 
 
+<div class="">
 
-merge siteul
+
+<button onclick="Export2Word('exportContent', 'Contract');">Export Fisier .doc</button>
+<button onclick="Export2Word('exportContent', 'word-content.docx');">Export Fisier .docx</button>
+
+</div>
+
+
+
+<script src="Script/Script.js"></script>
   </body>
 </html>
