--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 
   <div >
     <label for="name">Data Eveniment:</label>
-    <input >
+    <input id="dataEvenimentului">
   </div>
 
 <button type="submit">Creare fisa</button>
 </form>
+<button onclick="storeData(document.getElementById('dataEvenimentului').value)">Memorare Date In Local Storage</button>
 
 
 <!--
