--- a/result.html
+++ b/result.html
@@ -6,27 +6,19 @@
   </head>
   <body>
 
-
-
-
   <div id="exportContent">
 
-
-
     <h1 style="color:red"> FISA EVENIMENT </h1>
-    <div
+    <div>
     <div class="data_eveniment">
-
-
-
-
+        Data Evenimentului: 
+        <p id="dataEvenimentului">
+        <script>
+        document.getElementById("dataEvenimentului").innerHTML =  localStorage.getItem('Data');
+          </script>
+          </p>
       </div>
     </div>
-
-
-
-
-
 
 
   <div >
