--- a/result.html
+++ b/result.html
@@ -8,7 +8,7 @@
 
   <div id="exportContent">
 
-    <h1 style="color:red"> FISA EVENIMENT </h1>
+    <h1 style="color:red; border-style: solid; border-width: 1px;text-align: center"> ----FISA EVENIMENT---- </h1>
 
 
 
