--- a/result.html
+++ b/result.html
@@ -492,7 +492,7 @@
 
   <div >
 
- <div style="margin: 50px; margin-left: 100px; margin-right: 100px;" ><button class="button2" style="border: 2px solid #000000;border-radius: 5px;text-align: center;color:black;width: 100%;padding: 10px;font-size: 20px;" onclick="Export2Doc('exportContent', localStorage.getItem('Data'))">Export Fisa.doc</button></div>
+ <div style="margin: 50px; margin-left: 100px; margin-right: 100px;" ><button class="button2" style="border: 2px solid #000000;border-radius: 5px;text-align: center;color:black;width: 100%;padding: 10px;font-size: 20px;" onclick="Export2Doc('exportContent', localStorage.getItem('Nume_contract'))">Export Fisa.doc</button></div>
   <!--
   <div><button onclick="Export2Doc('exportContent', 'word-content.docx');">Export Fisier .docx</button>
 
